--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link type="text/css" rel="stylesheet" href="style.css"></link>
   </head>
   <body>
+    <h1>Hello</h1>
     <div class="hello">Hello</div>
     <div class="container"></div>
   </body>
