--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <h1>Hello</h1>
+    <h2>Hello world</h2>
     <div class="hello">Hello</div>
     <div class="container"></div>
   </body>
